create layout for anonymous pages

--- a/apps/AdminComposite/Views/User/ForgotPassword.cshtml
+++ b/apps/AdminComposite/Views/User/ForgotPassword.cshtml
@@ -1,22 +1,13 @@
-﻿@using AdminComposite.Models
+﻿@model object
+
 @{
-	ViewBag.Title = "Signin to the admin";
+	ViewBag.Title = "Forgot Password";
 	Layout = "~/Views/Shared/_AnonymousLayout.cshtml";
 }
 
 @section bodyClass {
 	login
 }
-
-<script type="text/javascript">
-
-	$(document).ready(function() {
-		$("#signin").click(function() {
-			window.location.href = "@Url.Action("Index", "Dashboard")";	
-			return false;
-		});
-	});
-</script>
 
 <a href="/" title="Back to Homepage"></a>
 
@@ -25,7 +16,7 @@
 		
 	<div class="article-container">
 			
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et dignissim metus. Maecenas id augue ac metus tempus aliquam. </p>
+		<p>We will send an email that conains a link to reset your password to the email address associated with your username.</p>
 				
 		<!-- Notification -->
 		<div class="notification error" style="display:none">
@@ -38,30 +29,21 @@
 			<fieldset>
 				<dl>
 					<dt>
-						<label>Login</label>
+						<label>Username</label>
 					</dt>
 					<dd>
 						<input type="text" class="large">
 					</dd>
-					<dt>
-						<label>Password</label>
-					</dt>
-					<dd>
-						<input type="password" class="large">
-					</dd>
-					<dt class="checkbox"><label>Remeber me</label></dt>
-					<dd><input type="checkbox"></dd>
 				</dl>
 			</fieldset>
-			<button type="button" class="right" id="signin">Log in</button>
+			<button type="button" class="right" id="signin">Reset Password</button>
 		</form>
 			
 	</div>
-		
 </article>
 <!-- /Login box -->
 
 <ul class="login-links">
-	<li><a href="@Url.Action("ForgotPassword", "User")">Lost Password</a></li>
+	<li><a href="@Url.Action("Signin", "User")">Signin</a></li>
 	<li><a href="@Url.Action("Create", "User")">Signup</a></li>
 </ul>
