--- a/apps/AdminComposite/Views/User/Create.cshtml
+++ b/apps/AdminComposite/Views/User/Create.cshtml
@@ -1,132 +1,71 @@
 ﻿@using AdminComposite.Models
 @{
 	ViewBag.Title = "Create a User";
-	Layout = null;
+	Layout = "~/Views/Shared/_AnonymousLayout.cshtml";
 }
 
-<!doctype html>
-<html lang="en">
-<head>
-	<title>NewCo Forum Admin - @ViewBag.Title</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta content="text/html; charset=utf-8" http-equiv="content-type">
+@section mainNav {
+	@{Html.RenderPartial("LeftRail/_AnonymousUserNavigation");}
+}
 
-	<link rel="shortcut icon" href="@Url.Content("~/Content/chromatron/img/favicon.ico")">
-	<link rel="apple-touch-icon" href="@Url.Content("~/Content/chromatron/img/apple-touch-icon.png")">
+<article>
+	<header>
+		<h2>Create Account</h2>
+	</header>
+	<section class="note-container">
+		<p class="note">Fields marked with an * are required</p>
+	</section>
+</article>
 
-	<link href="@Url.Content("~/Content/chromatron/css/style.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/chromatron/css/colors.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.datatables.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.datepicker.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.facebox.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.fileinput.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.fullcalendar.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.tipsy.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.visualize.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/chromatron/css/jquery.wysiwyg.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/admin-styles.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/simplemodal/jquery.simplemodal.1.4.1.css")" rel="stylesheet" type="text/css"/>
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic' rel='stylesheet' type='text/css'> 
-	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" >
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"> </script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.fullcalendar.min.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.facebox.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.tipsy.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.wysiwyg.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.datatables.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.datepicker.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.fileinput.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.tooltip.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/excanvas.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/chromatron/js/libs/selectivizr.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/chromatron/js/script.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/admin-ui.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/simplemodal/jquery.simplemodal.1.4.1.min.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/jquery.url-encode.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/jeditable/jquery.jeditable.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content//viewport/jquery.viewport.js")" type="text/javascript"></script>
-</head>
-<body>
+<fieldset>
+	<legend>Organization</legend>
+	<div class="input-container">
+		<label for="organization-name">
+			Name*</label>
+		<br />
+		<input type="text" id="organization-name" /></div>
+	<div class="input-container">
+		<label for="organization-url">
+			Website</label>
+		<br />
+		<input type="text" id="organization-url" /></div>
+	<div class="input-container">
+		<label for="organization-phone">
+			Phone #*</label>
+		<br />
+		<input type="text" id="organization-phone" /></div>
+	<div class="input-container">
+		<label for="organization-address-1">
+			Address*</label>
+		<br />
+		<input type="text" id="organization-address-1" /></div>
+	<div class="input-container">
+		<label for="organization-address-2">
+			Address 2</label>
+		<br />
+		<input type="text" id="organization-address-2" /></div>
+	<div class="input-container">
+		<label for="organization-city">
+			City*</label>
+		<br />
+		<input type="text" id="organization-city" /></div>
+	<div class="input-container">
+		<label for="organization-state">
+			State/Region*</label>
+		<br />
+		<input type="text" id="organization-state" /></div>
+	<div class="input-container">
+		<label for="organization-state">
+			Zip/Postal Code*</label>
+		<br />
+		<input type="text" id="organization-zip" /></div>
+	<div class="input-container">
+		<label for="organization-country">
+			Country*</label>
+		<br />
+		<input type="text" id="organization-country" /></div>
+	<br />
+	&nbsp;
+</fieldset>
 
-
-	<div>
-		
-		<section role="navigation">
-			<nav id="main-nav">
-				@{Html.RenderPartial("LeftRail/_AnonymousUserNavigation");}
-			</nav>
-		</section>
-
-		<section role="main">
-			<article>
-				<header>
-					<h2>Create Account</h2>
-				</header>
-				<section class="note-container">
-					<p class="note">Fields marked with an * are required</p>
-				</section>
-			</article>
-
-			<fieldset>
-				<legend>Organization</legend>
-				<div class="input-container">
-					<label for="organization-name">
-						Name*</label>
-					<br />
-					<input type="text" id="organization-name" /></div>
-				<div class="input-container">
-					<label for="organization-url">
-						Website</label>
-					<br />
-					<input type="text" id="organization-url" /></div>
-				<div class="input-container">
-					<label for="organization-phone">
-						Phone #*</label>
-					<br />
-					<input type="text" id="organization-phone" /></div>
-				<div class="input-container">
-					<label for="organization-address-1">
-						Address*</label>
-					<br />
-					<input type="text" id="organization-address-1" /></div>
-				<div class="input-container">
-					<label for="organization-address-2">
-						Address 2</label>
-					<br />
-					<input type="text" id="organization-address-2" /></div>
-				<div class="input-container">
-					<label for="organization-city">
-						City*</label>
-					<br />
-					<input type="text" id="organization-city" /></div>
-				<div class="input-container">
-					<label for="organization-state">
-						State/Region*</label>
-					<br />
-					<input type="text" id="organization-state" /></div>
-				<div class="input-container">
-					<label for="organization-state">
-						Zip/Postal Code*</label>
-					<br />
-					<input type="text" id="organization-zip" /></div>
-				<div class="input-container">
-					<label for="organization-country">
-						Country*</label>
-					<br />
-					<input type="text" id="organization-country" /></div>
-				<br />
-				&nbsp;
-			</fieldset>
-
-			@{Html.RenderPartial("_OrganizationUserForm", new CreateOrganizationUserModel{OrganizationIdentifier=Guid.Empty});}
-
-		</section>
-	</div>
-</body>
-</html>
+@{Html.RenderPartial("_OrganizationUserForm", new CreateOrganizationUserModel{OrganizationIdentifier=Guid.Empty});}
