--- a/apps/AdminComposite/Views/User/Created.cshtml
+++ b/apps/AdminComposite/Views/User/Created.cshtml
@@ -2,7 +2,8 @@
 
 @{
 	ViewBag.Title = "title";
-	Layout = "_Layout";
+	Layout = "~/Views/Shared/_AnonymousLayout.cshtml";
 }
 
 <h2>title</h2>
+User created
