--- a/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
@@ -1,7 +1,7 @@
 ﻿<section id="user-info">
 	<img src="@Url.Content("~/Content/chromatron/img/sample_user.png")" alt="Sample User Avatar">
 	<div>
-		<a href="#" title="Account Settings and Profile Page">Joe Tester</a> <em>Administrator</em>
+		<a href="#" title="Account Settings and Profile Page">@ViewBag.FirstName @ViewBag.LastName</a> <em>Administrator</em>
 		<ul>
 			<li><a class="button-link" href="#">view website</a></li>
 			<li><a class="button-link" href="@Url.Action("Signout", "User")">logout</a></li>
