--- a/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
@@ -4,7 +4,7 @@
 		<a href="#" title="Account Settings and Profile Page">@ViewBag.FirstName @ViewBag.LastName</a> <em>Administrator</em>
 		<ul>
 			<li><a class="button-link" href="#">view website</a></li>
-			<li><a class="button-link" href="@Url.Action("Signout", "User")">logout</a></li>
+			<li><a class="button-link" href="@Url.Action("DoSignout", "User")">logout</a></li>
 		</ul>
 	</div>
 </section>
