--- a/apps/AdminComposite/Views/Organization/ListUsers.cshtml
+++ b/apps/AdminComposite/Views/Organization/ListUsers.cshtml
@@ -6,7 +6,7 @@
 	$(document).ready(function () {
 		$("#add-user").click(function() {
 			$("<div></div>")
-				.load("/Organization/GetUser")
+				.load("/Organization/RegisterUser?organizationId=@ViewBag.OrganizationId")
 				.modal({
 						autoResize: true,
 						autoPosition: true,
@@ -19,7 +19,7 @@
 		});
 
 		$(".edit.user").click(function() {
-			var organizationId = "11111111-1111-1111-1111-111111111111";
+			var organizationId = "@ViewBag.OrganizationId";
 			$("<div></div>")
 				.load("/Organization/GetUser?organizationId=" + organizationId + "&userId=" + $(this).attr("data-user-id"))
 				.modal({
