update organization user

--- a/apps/AdminComposite/Views/Organization/ListUsers.cshtml
+++ b/apps/AdminComposite/Views/Organization/ListUsers.cshtml
@@ -1,4 +1,4 @@
-﻿@using AdminComposite.HtmlHelpers
+﻿@using AdminComposite.Extensions
 @using ForumAgent.ReadModels
 @model IList<OrganizationUser>
 
@@ -6,7 +6,7 @@
 	$(document).ready(function () {
 		$("#add-user").click(function() {
 			$("<div></div>")
-				.load("/Organization/RegisterUser?organizationId=@ViewBag.OrganizationId")
+				.load("/Organization/RegisterUser?organizationId=@ViewBag.OrganizationId&currentUserId=@ViewBag.UserId")
 				.modal({
 						autoResize: true,
 						autoPosition: true,
@@ -21,7 +21,7 @@
 		$(".edit.user").click(function() {
 			var organizationId = "@ViewBag.OrganizationId";
 			$("<div></div>")
-				.load("/Organization/GetUser?organizationId=" + organizationId + "&userId=" + $(this).attr("data-user-id"))
+				.load("/Organization/UpdateUser?organizationId=@ViewBag.OrganizationId&userId=" + $(this).attr("data-user-id"))
 				.modal({
 						autoResize: true,
 						autoPosition: true,
