--- a/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
@@ -1,4 +1,4 @@
-﻿@using AdminComposite.HtmlHelpers
+﻿@using AdminComposite.Extensions
 @using ForumAgent.ReadModels
 <script type="text/javascript">
 	$(document).ready(function () {
