--- a/apps/AdminComposite/Views/User/Signin.cshtml
+++ b/apps/AdminComposite/Views/User/Signin.cshtml
@@ -57,6 +57,6 @@
 <!-- /Login box -->
 
 <ul class="login-links">
-	<li><a href="@Url.Action("ForgotPassword", "User")">Lost Password</a></li>
+	<li><a href="@Url.Action("ForgotPassword", "User")">Forgot Password</a></li>
 	<li><a href="@Url.Action("Create", "User")">Signup</a></li>
 </ul>
