--- a/apps/AdminComposite/Views/Dashboard/Index.cshtml
+++ b/apps/AdminComposite/Views/Dashboard/Index.cshtml
@@ -4,7 +4,7 @@
 
 <article>
 	<header>
-		<h2 style="">Hello, *your name here*</h2>
+		<h2 style="">Hello, @ViewBag.FirstName</h2>
 	</header>
 </article>
 
