--- a/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
@@ -1,5 +1,5 @@
 ﻿<section id="user-info">
-	<img src="@Url.Content("~/Content/chromatron/img/sample_user.png")" alt="Sample User Avatar">
+	<img src="@ViewBag.Gravatar" alt="Sample User Avatar">
 	<div>
 		<a href="#" title="Account Settings and Profile Page">@ViewBag.FirstName @ViewBag.LastName</a> <em>Administrator</em>
 		<ul>
