--- a/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
+++ b/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
@@ -18,10 +18,10 @@
 			<tbody>
 				<tr>
 					<td>
-						<input type="checkbox" /></td>
-					<td>Facebook</td>
+						<input type="checkbox" checked="checked" disabled="disabled" /></td>
+					<td>Built-in</td>
 				</tr>
-				<tr>
+				@*<tr>
 					<td>
 						<input type="checkbox" /></td>
 					<td>OAuth</td>
@@ -45,7 +45,7 @@
 					<td>
 						<input type="checkbox" /></td>
 					<td>Active Directory</td>
-				</tr>
+				</tr>*@
 			</tbody>
 		</table>
 
