--- a/apps/AdminComposite/Views/User/Create.cshtml
+++ b/apps/AdminComposite/Views/User/Create.cshtml
@@ -47,6 +47,9 @@
 			<dt><label for="organization-name">Name*</label></dt>
 			<dd>@Html.TextBoxFor(m=>Model.OrganizationName, new {id="organization-name"})</dd>
 		
+			<dt><label for="organization-name">Slug*</label></dt>
+			<dd>@Html.TextBoxFor(m=>Model.OrganizationSlug, new {id="organization-name"})</dd>
+		
 			<dt><label for="organization-url">Website</label></dt>
 			<dd>@Html.TextBoxFor(m=>Model.OrganizationUrl, new {id="organization-url"})</dd>
 
