--- a/apps/AdminComposite/Views/Organization/Details.cshtml
+++ b/apps/AdminComposite/Views/Organization/Details.cshtml
@@ -109,6 +109,9 @@
 				<dt><label for="organization-name">Organization Name</label></dt>
 				<dd class="text"><p id="organization-name" class="organization-detail">Organization Name</p></dd>
 
+				<dt><label for="organization-slug">Slug</label></dt>
+				<dd class="text"><p id="organization-slug" class="organization-detail">slug</p></dd>
+
 				<dt><label for="organization-url">Website Url</label></dt>
 				<dd class="text"><p id="organization-url" class="organization-detail">http://google.com</p></dd>
 
