initial pass of forum/admin integration complete

--- a/apps/ForumComposite/Views/Post/Create.cshtml
+++ b/apps/ForumComposite/Views/Post/Create.cshtml
@@ -10,6 +10,7 @@
 	@using (Html.BeginFormForInputModel(Model, true, Url.Action("List")))
 	{
 		@Html.HiddenFor(m => m.AuthorIdentifier)
+		@Html.HiddenFor(m => m.ForumIdentifier)
 
 		<div>
 			@Html.LabelFor(m => m.Title)
